# Lidar_Odometry_Hub_ros2

./: .gitignore  eval_traj.py  plot_trajectories.py
Data/: compare_all.py  eval_tum.py  measure_cpu.py  plot_ppt.py
Data/comparison_results/: plot_ppt.py
Docker/: Dockerfile  docker-compose.yaml
src/SiMpLE/: Dockerfile  README.md
src/SiMpLE/simple/: package.xml
src/SiMpLE/simple/include/simple/: PointCloud.hpp
src/SiMpLE/simple/src/: PointCloud.cpp
src/SiMpLE/simple_ros/: package.xml
src/SiMpLE/simple_ros/launch/: simple.launch.py
src/SiMpLE/simple_ros/src/: lidar_odometry.cpp
src/direct_lidar_odometry/: README.md
src/direct_lidar_odometry/cfg/: dlo.yaml  params.yaml
src/direct_lidar_odometry/include/dlo/: map.h  odom.h
src/direct_lidar_odometry/launch/: dlo.launch.py
src/direct_lidar_odometry/src/dlo/: map.cc  odom.cc
src/kiss-icp/ros/config/: config.yaml
src/kiss-icp/ros/launch/: odometry.launch.py
src/kiss-icp/ros/src/: OdometryServer.cpp  OdometryServer.hpp
src/lidar_odom_subscriber/: package.xml
src/lidar_odom_subscriber/launch/: kiss.launch.py  mola.launch.py  odom_comparator.launch.py
src/lidar_odom_subscriber/scripts/: plot_trajectories.py
src/lidar_odom_subscriber/src/: odom_gps_comparator.cpp  odom_gps_comparator_matrix.cpp
src/trajlo_ros/: package.xml
src/trajlo_ros/data/: config_livox.yaml
src/trajlo_ros/include/trajlo/core/: odometry.h
src/trajlo_ros/launch/: trajlo.launch.py
src/trajlo_ros/src/: trajlo_ros_node.cpp
src/trajlo_ros/src/core/: odometry.cpp
