<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajlo_ros</name>
  <version>0.1.0</version>
  <description>A ROS 2 wrapper for the Traj-LO LiDAR Odometry algorithm.</description>
  <maintainer email="davidredquin@gmail.com">david</maintainer>
  <license>MIT</license> <!-- Asume MIT por el proyecto original, ajústalo si es necesario -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend> <!-- Añadida para conversiones -->
  <depend>libpcl-all-dev</depend> <!-- Añadida para PCL -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>